# openvino_inference_yolov8

./: CMakeLists.txt  main.cpp
